syntax = "proto3";

package position.v1;

option go_package = "./api/position/v1";

service Position {
  // 职务列表
  rpc ListPosition(ListPositionReq) returns (ListPositionRes);
  // 获取职务详情
  rpc GetPosition(GetPositionReq) returns (GetPositionRes);
  // 新建职务
  rpc CreatePosition(CreatePositionReq) returns (CreatePositionRes);
  // 编辑职务
  rpc UpdatePosition(UpdatePositionReq) returns (UpdatePositionRes);
  // 删除职务
  rpc DeletePosition(DeletePositionReq) returns (DeletePositionRes);
  // 按组织获取可选职务集合
  rpc GetPositionOptions(GetPositionOptionsReq) returns (GetPositionOptionsRes);
}

// 职务列表请求
message ListPositionReq {
  // 页码
  int64 page = 1; // v:min:1#页码必须大于0
  // 每页数量
  int64 pageSize = 2; // v:min:1|max:200#每页数量必须大于0|每页数量不能超过200
  // 职务名称模糊
  string keyword = 3;
  // 状态:position_status
  string status = 4; // v:required|enum:position_status#状态不能为空
}

// 职务列表项
message PositionListItem {
  // 职务ID
  int64 id = 1;
  // 职务名称
  string name = 2;
  // 状态:position_status
  string status = 3;
  // 数据权限:position_data_scope
  string dataScope = 4;
  // 关联的组织ID数组
  repeated int64 orgIds = 5;
  // 关联的角色ID数组
  repeated int64 roleIds = 6;
  // 创建时间
  int64 createAt = 7;
}

// 职务列表响应
message ListPositionRes {
  // 职务列表
  repeated PositionListItem list = 1;
  // 总数
  int64 total = 2;
  // 页码
  int64 page = 3;
  // 每页数量
  int64 pageSize = 4;
}

// 获取职务详情请求
message GetPositionReq {
  // 职务ID
  int64 id = 1; // v:required|min:1#职务ID不能为空|职务ID必须大于0
}

// 获取职务详情响应
message GetPositionRes {
  // 职务ID
  int64 id = 1;
  // 职务名称
  string name = 2;
  // 状态:position_status
  string status = 3;
  // 数据权限:position_data_scope
  string dataScope = 4;
  // 关联的组织ID数组
  repeated int64 orgIds = 5;
  // 关联的角色ID数组
  repeated int64 roleIds = 6;
  // 创建时间
  int64 createAt = 7;
  // 更新时间
  int64 updateAt = 8;
}

// 新建职务请求
message CreatePositionReq {
  // 职务名称
  string name = 1; // v:required|length:1,20#职务名称不能为空|职务名称长度必须在1-20之间
  // 状态:position_status
  string status = 2; // v:required|enum:position_status#状态不能为空
  // 数据权限:position_data_scope
  string dataScope = 3; // v:required|enum:position_data_scope#数据权限不能为空
  // 关联的组织ID数组
  repeated int64 orgIds = 4;
  // 关联的角色ID数组
  repeated int64 roleIds = 5;
}

// 新建职务响应
message CreatePositionRes {
  // 职务ID
  int64 id = 1;
}

// 编辑职务请求
message UpdatePositionReq {
  // 职务ID
  int64 id = 1; // v:required|min:1#职务ID不能为空|职务ID必须大于0
  // 职务名称
  string name = 2; // v:length:1,20#职务名称长度必须在1-20之间
  // 状态:position_status
  string status = 3; // v:required|enum:position_status#状态不能为空
  // 数据权限:position_data_scope
  string dataScope = 4; // v:required|enum:position_data_scope#数据权限不能为空
  // 关联的组织ID数组
  repeated int64 orgIds = 5;
  // 关联的角色ID数组
  repeated int64 roleIds = 6;
}

// 编辑职务响应
message UpdatePositionRes {
  // 是否成功
  bool success = 1;
}

// 删除职务请求
message DeletePositionReq {
  // 职务ID
  int64 id = 1; // v:required|min:1#职务ID不能为空|职务ID必须大于0
}

// 删除职务响应
message DeletePositionRes {
  // 是否成功
  bool success = 1;
}

// 按组织获取可选职务集合请求
message GetPositionOptionsReq {
  // 组织ID列表(逗号分隔)
  repeated int64 orgIds = 1; // v:required#组织ID不能为空
  // 状态过滤,默认仅返回启用
  string status = 2; // v:required|enum:position_status#状态不能为空
  // 职务名称模糊
  string keyword = 3;
}

// 职务选项
message PositionOption {
  // 职务ID
  int64 id = 1;
  // 职务名称
  string name = 2;
  // 状态:position_status
  string status = 3;
  // 数据权限:position_data_scope
  string dataScope = 4;
}

// 按组织获取可选职务集合响应
message GetPositionOptionsRes {
  // 职务选项列表
  repeated PositionOption list = 1;
}

